@@ -2,6 +2,8 @@ Version 1.0.1 - unreleased
  * Always show basic tags in metadata comparison box, even if empty (title,
    artist, album, tracknumber, ~length, date) (PICARD-201)
  * Fixed AcoustID submission failure after removing files from Picard (PICARD-82)
+ * Allow multi-select in new MetaDataBox for delete/remove tags (PICARD-194)
+ * File browser remembers last directory/no longer crashes on OS X (PICARD-104)
 
 Version 1.0 - 2012-06-02
  * New UI: Extended comparison of existing vs. MB metadata & tags (PICARD-43)
